updated from catalogue building results

--- a/conf/linked.data.gov.au-datasets.conf
+++ b/conf/linked.data.gov.au-datasets.conf
@@ -43,23 +43,23 @@
         RewriteRule ^/dataset/asgs2016/(.*)$                    http://asgsld.net/2016/$1 [R=302,L]
 
         # http://linked.data.gov.au/dataset/bioregion
-        RewriteRule ^/dataset/bioregion$                              http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/ibra7 [R=302,QSA,L]
+        RewriteRule ^/dataset/bioregion$                              https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/IBRA7 [R=302,QSA,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/bioregion/(.*).ttl$                     http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*)$                         https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/turtle [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*).ttl$                     https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/turtle [R=302,L]
         RewriteCond %{HTTP:Accept} application/rdf+xml [NC]
-        RewriteRule ^/dataset/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/rdf+xml [R=302,L]
-        RewriteRule ^/dataset/bioregion/(.*).(rdf|owl|xml)$           http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/rdf+xml [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*)$                         https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/rdf+xml [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*).(rdf|owl|xml)$           https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/rdf+xml [R=302,L]
         RewriteCond %{HTTP:Accept} application/ld+json [NC]
-        RewriteRule ^/dataset/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/ld+json [R=302,L]
-        RewriteRule ^/dataset/bioregion/(.*).(json|jsonld|json-ld)$   http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/ld+json [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*)$                         https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/ld+json [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*).(json|jsonld|json-ld)$   https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/ld+json [R=302,L]
         RewriteCond %{HTTP:Accept} text/n3 [NC]
-        RewriteRule ^/dataset/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/n3 [R=302,L]
-        RewriteRule ^/dataset/bioregion/(.*).n3$                      http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/n3 [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*)$                         https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/n3 [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*).n3$                      https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=text/n3 [R=302,L]
         RewriteCond %{HTTP:Accept} application/n-triples [NC]
-        RewriteRule ^/dataset/bioregion/(.*)$                         http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/n-triples [R=302,L]
-        RewriteRule ^/dataset/bioregion/(.*).(nt|ntriples|n-triples)$ http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/n-triples [R=302,L]
-        RewriteRule ^/dataset/bioregion/(.*)                          http://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1 [R=302,QSA,L]
+        RewriteRule ^/dataset/bioregion/(.*)$                         https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/n-triples [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*).(nt|ntriples|n-triples)$ https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1?_format=application/n-triples [R=302,L]
+        RewriteRule ^/dataset/bioregion/(.*)                          https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/$1 [R=302,QSA,L]
 
         # http://linked.data.gov.au/dataset/data-policies
         # Dataset
