updates from catalogue downloader

--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -3,17 +3,17 @@
         #
 
         # http://linked.data.gov.au/def/agop
-	    RewriteRule ^/def/agop/spec$			       https://raw.githack.com/AGLDWG/agop/master/specification.html [R=302,L]
+	RewriteRule ^/def/agop/spec$			       https://raw.githack.com/AGLDWG/agop/master/specification.html [R=302,L]
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/agop$                                https://raw.githack.com/AGLDWG/agop/master/agop.ttl? [R=302,L]
         RewriteRule ^/def/agop.ttl$                            https://raw.githack.com/AGLDWG/agop/master/agop.ttl [R=302,L]
         RewriteRule ^/def/agop$                                https://raw.githack.com/AGLDWG/agop/master/agop.html [R=302,L]
         RewriteRule ^/def/agop/validator$		       https://raw.githack.com/AGLDWG/agop/master/validator.shacl.ttl [R=302,L]
-	    RewriteRule ^/def/agop/example.valid-1$                https://raw.githack.com/AGLDWG/agop/master/example.valid-1.ttl [R=302,L]
-	    RewriteRule ^/def/agop/example.valid-2$                https://raw.githack.com/AGLDWG/agop/master/example.valid-2.ttl [R=302,L]
-	    RewriteRule ^/def/agop/example.invalid-1$              https://raw.githack.com/AGLDWG/agop/master/example.invalid-1.ttl [R=302,L]
-	    RewriteRule ^/def/agop/example.invalid-2$              https://raw.githack.com/AGLDWG/agop/master/example.invalid-2.ttl [R=302,L]
+	RewriteRule ^/def/agop/example.valid-1$                https://raw.githack.com/AGLDWG/agop/master/example.valid-1.ttl [R=302,L]
+	RewriteRule ^/def/agop/example.valid-2$                https://raw.githack.com/AGLDWG/agop/master/example.valid-2.ttl [R=302,L]
+	RewriteRule ^/def/agop/example.invalid-1$              https://raw.githack.com/AGLDWG/agop/master/example.invalid-1.ttl [R=302,L]
+	RewriteRule ^/def/agop/example.invalid-2$              https://raw.githack.com/AGLDWG/agop/master/example.invalid-2.ttl [R=302,L]
 
 
         # http://linked.data.gov.au/def/agrif
@@ -253,13 +253,19 @@
         RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/owl2-rdf-based-semantics/\>
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/geoqk(.*)$                             https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.ttl? [R=302,L]
-        RewriteRule ^/def/geoqk(.*).ttl$                         https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.ttl [R=302,L]
+        RewriteRule ^/def/geoqk(.*)$                            https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.ttl? [R=302,L]
+        RewriteRule ^/def/geoqk(.*).ttl$                        https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.ttl [R=302,L]
         RewriteCond %{QUERY_STRING} ^_profile=owl$ [OR]
         RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/owl2-rdf-based-semantics/ [OR]
         RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/owl2-rdf-based-semantics/\>
-        RewriteRule ^/def/geoqk(.*)$                             https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.html$1 [R=302,L]
-        RewriteRule ^/def/geoqk(.*)$                             https://vocabs.gsq.digital/vocabulary/geoqk [R=302,L]
+        RewriteRule ^/def/geoqk(.*)$                            https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.html$1 [R=302,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/def/geoqk(.*)$				https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.skos.ttl [R=302,L]
+	RewriteRule ^/def/geoqk(.*).ttl$			https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.skos.ttl [R=302,L]
+
+        RewriteRule ^/def/geoqk(.*)$                            https://vocabs.gsq.digital/vocabulary/geoqk [R=302,L]
 
         # http://linked.data.gov.au/def/geou
         RewriteCond %{QUERY_STRING} ^_profile=owl$ [OR]
@@ -270,9 +276,11 @@
         RewriteRule ^/def/geou(.*)$                             https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geounits.ttl? [R=302,L]
         RewriteRule ^/def/geou(.*).ttl$                         https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geounits.ttl [R=302,L]
 	# default profile: skos
-	RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]  
-	RewriteCond %{HTTP:Accept} text/turtle [NC]
-	RewriteRule ^/def/geou(.*)$                             "https://vocabs.gsq.digital/vocabulary/geou?uri=http://linked.data.gov.au/def/geou&_profile=skos&_mediatype=text/turtle" [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geoqk(.*)$                            https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geounits.skos.ttl [R=302,L]
+        RewriteRule ^/def/geoqk(.*).ttl$                        https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geounits.skos.ttl [R=302,L]
+
         RewriteRule ^/def/geou(.*)$                             https://vocabs.gsq.digital/vocabulary/geou [R=302,L]
 
         # http://linked.data.gov.au/def/geox
@@ -389,6 +397,6 @@
         RewriteRule ^/def/su/ont(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/su.html [R=303,L]
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/su(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
-        RewriteRule ^/def/su(.*).ttl$                         https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
-        RewriteRule ^/def/su(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.html [R=303,L]
+        RewriteRule ^/def/su$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
+        RewriteRule ^/def/su.ttl$                         https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
+        RewriteRule ^/def/su$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.html [R=303,L]
