--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -11,6 +11,13 @@
         RewriteRule ^/def/tern-cv/$                             http://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=302,L]
         RewriteRule ^/def/tern-cv(.*)$                          http://linkeddata.tern.org.au/viewer/tern/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
 
+        # https://linked.data.gov.au/def/australian-phone-area-codes
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/australian-phone-area-codes(.*)$ "https://vocabs.gsq.digital/object?vocab_id=australian-phone-area-codes&uri=http://linked.data.gov.au/def/australian-phone-area-codes$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/australian-phone-area-codes(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=australian-phone-area-codes&uri=http://linked.data.gov.au/def/australian-phone-area-codes$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/australian-phone-area-codes(.*)$ "https://vocabs.gsq.digital/object?vocab_id=australian-phone-area-codes&uri=http://linked.data.gov.au/def/australian-phone-area-codes$1" [R=302,NE,L]
+
         # Multiple Vocabs: TERN's CorVeg
         # http://linked.data.gov.au/def/corveg-cv
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
@@ -34,7 +41,7 @@
         RewriteCond %{QUERY_STRING} ^_format=application/rdf+xml$ [OR]
         RewriteCond %{HTTP:Accept} application/rdf+xml [NC]
         RewriteRule ^/def/gba(.*)$                              http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
-        RewriteRule ^/def/gba(.*).rdf$                          http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]        
+        RewriteRule ^/def/gba(.*).rdf$                          http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
         RewriteRule ^/def/gba(.*)$                              http://registry.it.csiro.au/def/gba$1 [R=302,L]
 
         # http://linked.data.gov.au/def/reg-status
@@ -155,6 +162,41 @@
         RewriteRule ^/def/party-identifier-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=party-identifier-type&uri=http://linked.data.gov.au/def/party-identifier-type$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/party-identifier-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=party-identifier-type&uri=http://linked.data.gov.au/def/party-identifier-type$1" [R=302,NE,L]
 
+        # https://linked.data.gov.au/def/qg-agent
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/qg-agent(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-agent&uri=http://linked.data.gov.au/def/qg-agent$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-agent(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-agent&uri=http://linked.data.gov.au/def/qg-agent$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-agent(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-agent&uri=http://linked.data.gov.au/def/qg-agent$1" [R=302,NE,L]
+
+        # https://linked.data.gov.au/def/qg-file-type
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/qg-file-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-file-type(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-file-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1" [R=302,NE,L]
+
+        # https://linked.data.gov.au/def/qg-security-classifications
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/qg-security-classifications(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-security-classifications&uri=http://linked.data.gov.au/def/qg-security-classifications$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-security-classifications(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-security-classifications&uri=http://linked.data.gov.au/def/qg-security-classifications$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-security-classifications(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-security-classifications&uri=http://linked.data.gov.au/def/qg-security-classifications$1" [R=302,NE,L]
+
+        # https://linked.data.gov.au/def/qg-sites
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/qg-sites(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-sites&uri=http://linked.data.gov.au/def/qg-sites$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-sites(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-sites&uri=http://linked.data.gov.au/def/qg-sites$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-sites(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-sites&uri=http://linked.data.gov.au/def/qg-sites$1" [R=302,NE,L]
+
+        # https://linked.data.gov.au/def/qld-data-licenses
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/qld-data-licenses(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qld-data-licenses&uri=http://linked.data.gov.au/def/qld-data-licenses$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qld-data-licenses(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qld-data-licenses&uri=http://linked.data.gov.au/def/qld-data-licenses$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qld-data-licenses(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qld-data-licenses&uri=http://linked.data.gov.au/def/qld-data-licenses$1" [R=302,NE,L]
+
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/iso19115-1/RoleCode(.*)$ "https://vocabs.gsq.digital/object?vocab_id=iso19115-1/RoleCode&uri=http://linked.data.gov.au/def/iso19115-1/RoleCode$1&_mediatype=text/turtle" [R=302,L]
@@ -234,6 +276,13 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/resource-project-lifecycle(.*)$ "https://vocabs.gsq.digital/object?vocab_id=resource-project-lifecycle&uri=http://linked.data.gov.au/def/resource-project-lifecycle$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/resource-project-lifecycle(.*)$ "https://vocabs.gsq.digital/object?vocab_id=resource-project-lifecycle&uri=http://linked.data.gov.au/def/resource-project-lifecycle$1" [R=302,NE,L]
+
+        # https://linked.data.gov.au/def/resource-type
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/resource-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/resource-type(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/resource-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1" [R=302,NE,L]
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
