--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -130,6 +130,13 @@
         RewriteRule ^/def/crs(.*).ttl$                          https://raw.githack.com/CSIRO-enviro-informatics/crs-ont/master/schema/crs.ttl [R=302,L]
         RewriteRule ^/def/crs(.*)$                              https://raw.githack.com/CSIRO-enviro-informatics/crs-ont/master/html/crs.html$1 [R=302,L]
 
+	# Vocabulary
+        # https://linked.data.gov.au/def/dataset-relationships
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/dataset-relationships(.*)$ "https://vocabs.gsq.digital/object?vocab_id=dataset-relationships&uri=http://linked.data.gov.au/def/dataset-relationships$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/dataset-relationships(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=dataset-relationships&uri=http://linked.data.gov.au/def/dataset-relationships$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/dataset-relationships(.*)$ "https://vocabs.gsq.digital/object?vocab_id=dataset-relationships&uri=http://linked.data.gov.au/def/dataset-relationships$1" [R=302,NE,L]
 
         # http://linked.data.gov.au/def/dataset
         # all requests for RDF (turtle) just go to the whole borehole.ttl doc
