--- a/conf/linked.data.gov.au-datasets.conf
+++ b/conf/linked.data.gov.au-datasets.conf
@@ -42,6 +42,20 @@
         RewriteRule ^/dataset/asgs2016/(.*).ttl$                http://asgsld.net/2016/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/asgs2016/(.*)$                    http://asgsld.net/2016/$1 [R=302,L]
 
+        # http://linked.data.gov.au/dataset/auspix
+        # Dataset
+        # whole-of-dataset
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/auspix$ "https://fsdf.org.au/dataset/auspix/index.ttl" [R=302,L]
+        RewriteRule ^/dataset/auspix.ttl$ "https://fsdf.org.au/dataset/auspix/index.ttl" [R=302,L]
+        RewriteRule ^/dataset/auspix$ https://fsdf.org.au/dataset/auspix$1 [R=302,L]
+        # dataset elements
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/auspix/(.*) "https://fsdf.org.au/dataset/auspix/collections/auspix/items/$1?_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/dataset/auspix/(.*) "https://fsdf.org.au/dataset/auspix/collections/auspix/items/$1" [R=302,L]
+
         # http://linked.data.gov.au/dataset/bioregion
         RewriteRule ^/dataset/bioregion$                              https://linkeddata.tern.org.au/viewer/tern/id/http://linked.data.gov.au/dataset/bioregion/IBRA7 [R=302,QSA,L]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -181,10 +195,17 @@
 
         # http://linked.data.gov.au/dataset/placenames
         # Dataset
+	# whole-of-dataset
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/placenames(.*)$ "https://fsdf.org.au/dataset/placenames$1?_mediatype=text/turtle" [R=302,L]
-	    RewriteRule ^/dataset/placenames(.*)$ https://fsdf.org.au/dataset/placenames$1 [R=302,L]
+        RewriteRule ^/dataset/placenames$ "https://fsdf.org.au/dataset/placenames/index.ttl" [R=302,L]
+	RewriteRule ^/dataset/placenames.ttl$ "https://fsdf.org.au/dataset/placenames/index.ttl" [R=302,L]
+	RewriteRule ^/dataset/placenames$ https://fsdf.org.au/dataset/placenames$1 [R=302,L]
+	# dataset elements
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/dataset/placenames/placename/(.*) "https://fsdf.org.au/dataset/placenames/collections/placenames/items/$1?_mediatype=text/turtle" [R=302,L]
+	RewriteRule ^/dataset/placenames/placename/(.*) "https://fsdf.org.au/dataset/placenames/collections/placenames/items/$1" [R=302,L]
 
 
         # http://linked.data.gov.au/dataset/ausplots
