add Loc-I Data Platform Profile

--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -322,11 +322,23 @@
         # http://linked.data.gov.au/def/iso19160-1-address                                                                                                                
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]                                                                                                            
         RewriteCond %{HTTP:Accept} text/turtle [NC]                                                                                                                       
-        RewriteRule ^/def/iso19160-1-address(.*)$              	  https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.ttl? [R=302,L]                    
+        RewriteRule ^/def/iso19160-1-address(.*)$                 https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.ttl? [R=302,L]                    
         RewriteRule ^/def/iso19160-1-address(.*).ttl$             https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.ttl [R=302,L]                     
         RewriteRule ^/def/iso19160-1-address/Address/code/(.*)$   https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/codelist.ttl? [R=302,L]                      
         RewriteRule ^/def/iso19160-1-address(.*)$                 https://raw.githack.com/AGLDWG/iso19160-1-address-ont/master/iso19160-1.html$1 [R=302,L]   
         
+	# http://linked.data.gov.au/def/loci-dp
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/loci-dp$                              https://raw.githack.com/surroundaustralia/loci-data-profile/master/profile.ttl [R=302,L]
+        RewriteRule ^/def/loci-dp.ttl$                          https://raw.githack.com/surroundaustralia/loci-data-profile/master/profile.ttl [R=302,L]
+	RewriteRule ^/def/loci-dp$                              https://raw.githack.com/surroundaustralia/loci-data-profile/master/profile.html [R=302,L]
+	RewriteRule ^/def/loci-dp/spec$                         https://raw.githack.com/surroundaustralia/loci-data-profile/master/specification.html [R=302,L]
+	RewriteRule ^/def/loci-dp/guidance$			https://github.com/surroundaustralia/loci-data-profile/blob/master/README.md [R=302,L]
+	RewriteRule ^/def/loci-dp/validator/(.*)$		https://raw.githack.com/surroundaustralia/loci-data-profile/master/validators/$1.ttl [R=302,L]
+	RewriteRule ^/def/loci-dp/example/(.*)$                 https://raw.githack.com/surroundaustralia/loci-data-profile/master/examples/$1.ttl [R=302,L]
+
+
         # http://linked.data.gov.au/def/loci
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -340,7 +352,6 @@
         RewriteCond %{HTTP:Accept} application/ld\+json [NC]
         RewriteRule ^/def/loci                                  https://raw.githack.com/CSIRO-enviro-informatics/loci-ont/master/loci.jsonld? [R=302,L]
         RewriteRule ^/def/loci(.*).jsonld$                      https://raw.githack.com/CSIRO-enviro-informatics/loci-ont/master/loci.jsonld [R=302,L]
-
         RewriteRule ^/def/loci(.*)$                             https://raw.githack.com/CSIRO-enviro-informatics/loci-ont/master/loci.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/geoadminfeatures
