--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -157,6 +157,13 @@
         RewriteRule ^/def/gsq-sample-facility(.*)$ "https://vocabs.gsq.digital/object?vocab_id=gsq-sample-facility&uri=http://linked.data.gov.au/def/gsq-sample-facility$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/gsq-sample-facility(.*)$ "https://vocabs.gsq.digital/object?vocab_id=gsq-sample-facility&uri=http://linked.data.gov.au/def/gsq-sample-facility$1" [R=302,NE,L]
 
+        # https://linked.data.gov.au/def/qg-file-type
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/nsw-quality-dimension(.*)$ "https://vocabs.gsq.digital/object?vocab_id=quality-dimension&uri=http://linked.data.gov.au/def/NSW-Data/quality-dimension$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/nsw-quality-dimension(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=quality-dimension&uri=http://linked.data.gov.au/def/NSW-Data/quality-dimension$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/nsw-quality-dimension(.*)$ "https://vocabs.gsq.digital/object?vocab_id=quality-dimension&uri=http://linked.data.gov.au/def/NSW-Data/quality-dimension$1" [R=302,NE,L]
+
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/party-identifier-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=party-identifier-type&uri=http://linked.data.gov.au/def/party-identifier-type$1&_mediatype=text/turtle" [R=302,L]
@@ -172,9 +179,9 @@
         # https://linked.data.gov.au/def/qg-file-type
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/qg-file-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/qg-file-type(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/qg-file-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1" [R=302,NE,L]
+        RewriteRule ^/def/qg-file-types(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-file-types(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-file-types(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1" [R=302,NE,L]
 
         # https://linked.data.gov.au/def/qg-security-classifications
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
@@ -280,9 +287,9 @@
         # https://linked.data.gov.au/def/resource-type
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/resource-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/resource-type(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/resource-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1" [R=302,NE,L]
+        RewriteRule ^/def/resource-types(.*)$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/resource-types(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/resource-types(.*)$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1" [R=302,NE,L]
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
