ARDC/ABS ANZSRC-FOR vocab

--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -2,6 +2,19 @@
         #	Vocabularies
         #
 
+        # https://linked.data.gov.au/def/anzsrc-for
+        # The "front page", in Turtle and (default) HTML
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+        RewriteRule ^/def/anzsrc-for(/2020)?/?$ "https://vocabs.ardc.edu.au/repository/redirects/anzsrc-2020-for/current.ttl" [R=302,L]
+        RewriteRule ^/def/anzsrc-for(/2020)?/?$ "https://vocabs.ardc.edu.au/repository/api/lda/anzsrc-2020-for/resource?uri=https://linked.data.gov.au/def/anzsrc-for/2020" [R=302,NE,L]
+        # Individual resources, in Turtle and (default) HTML
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+        RewriteRule ^/def/anzsrc-for/2020/(.+)$ "https://vocabs.ardc.edu.au/repository/api/lda/anzsrc-2020-for/resource.ttl?uri=https://linked.data.gov.au/def/anzsrc-for/2020/$1" [R=302,L]
+        RewriteRule ^/def/anzsrc-for/2020/(.+)$ "https://vocabs.ardc.edu.au/repository/api/lda/anzsrc-2020-for/resource?uri=https://linked.data.gov.au/def/anzsrc-for/2020/$1" [R=302,NE,L]
+
+
         # http://linked.data.gov.au/def/ausplots-cv
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -10,6 +23,7 @@
         RewriteRule ^/def/ausplots-cv(.*)$                      http://linkeddata.tern.org.au/viewer/ausplots/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
         RewriteRule ^/def/tern-cv/$                             http://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=302,L]
         RewriteRule ^/def/tern-cv(.*)$                          http://linkeddata.tern.org.au/viewer/tern/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+
 
         # https://linked.data.gov.au/def/australian-phone-area-codes
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
@@ -29,6 +43,7 @@
         RewriteRule ^/def/corveg-cv(.*)                         http://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1?_format=text/turtle [R=302,L]	
         RewriteRule ^/def/corveg-cv(.*)                         http://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1 [R=302,L]
     
+
         # http://linked.data.gov.au/def/gba
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
