ARDC/ABS ANZSRC-SEO vocab
Added rewrites for ANZSRC 2020 SEO vocabulary.

--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -15,6 +15,19 @@
         RewriteRule ^/def/anzsrc-for/2020/(.+)$ "https://vocabs.ardc.edu.au/repository/api/lda/anzsrc-2020-for/resource?uri=https://linked.data.gov.au/def/anzsrc-for/2020/$1" [R=302,NE,L]
 
 
+        # https://linked.data.gov.au/def/anzsrc-seo
+        # The "front page", in Turtle and (default) HTML
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+        RewriteRule ^/def/anzsrc-seo(/2020)?/?$ "https://vocabs.ardc.edu.au/repository/redirects/anzsrc-2020-seo/current.ttl" [R=302,L]
+        RewriteRule ^/def/anzsrc-seo(/2020)?/?$ "https://vocabs.ardc.edu.au/repository/api/lda/anzsrc-2020-seo/resource?uri=https://linked.data.gov.au/def/anzsrc-seo/2020" [R=302,NE,L]
+        # Individual resources, in Turtle and (default) HTML
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+        RewriteRule ^/def/anzsrc-seo/2020/(.+)$ "https://vocabs.ardc.edu.au/repository/api/lda/anzsrc-2020-seo/resource.ttl?uri=https://linked.data.gov.au/def/anzsrc-seo/2020/$1" [R=302,L]
+        RewriteRule ^/def/anzsrc-seo/2020/(.+)$ "https://vocabs.ardc.edu.au/repository/api/lda/anzsrc-2020-seo/resource?uri=https://linked.data.gov.au/def/anzsrc-seo/2020/$1" [R=302,NE,L]
+
+
         # http://linked.data.gov.au/def/ausplots-cv
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
