--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -162,6 +162,13 @@
         RewriteRule ^/def/fsdf(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.ttl [R=302,L]
         RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.html$1 [R=302,L]
 
+        # http://linked.data.gov.au/def/fsdf-network
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/fsdf-network(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf/master/rdf/network.ttl? [R=303,L]
+        RewriteRule ^/def/fsdf-network(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/fsdf/master/rdf/network.ttl [R=303,L]
+        RewriteRule ^/def/fsdf-network(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf/master/network.html$1 [R=303,L]
+
         # GA's VocPub Profile
         RewriteRule /def/ga-vocpub/invalid.1.ttl	        https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/examples/invalid.1.ttl [R=302,L]
         RewriteRule /def/ga-vocpub/invalid.2.ttl	        https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/examples/invalid.2.ttl [R=302,L]
