diabling FSDF Ont

--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -156,11 +156,11 @@
 
 
         # http://linked.data.gov.au/def/fsdf
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.ttl? [R=302,L]
-        RewriteRule ^/def/fsdf(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.ttl [R=302,L]
-        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.html$1 [R=302,L]
+#        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+#        RewriteCond %{HTTP:Accept} text/turtle [NC]
+#        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.ttl? [R=302,L]
+#        RewriteRule ^/def/fsdf(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.ttl [R=302,L]
+#        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.html$1 [R=302,L]
 
         # GA's VocPub Profile
         RewriteRule /def/ga-vocpub/invalid.1.ttl	        https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/examples/invalid.1.ttl [R=302,L]
