--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -155,6 +155,20 @@
         RewriteRule ^/def/datatype(.*)$                         https://raw.githack.com/AGLDWG/datatype-ont/master/html/datatype.html$1 [R=302,L]
 
 
+        # http://linked.data.gov.au/def/fsdf/core
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/fsdf/core(.*)$                             https://raw.githack.com/GeoscienceAustralia/FSDF/master/rdf/core.ttl? [R=303,L]
+        RewriteRule ^/def/fsdf/core(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/FSDF/master/rdf/core.ttl [R=303,L]
+        RewriteRule ^/def/fsdf/core(.*)$                             https://raw.githack.com/GeoscienceAustralia/FSDF/master/core.html$1 [R=303,L]
+
+        # http://linked.data.gov.au/def/fsdf/network
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/fsdf/network(.*)$                             https://raw.githack.com/GeoscienceAustralia/FSDF/master/rdf/network.ttl? [R=303,L]
+        RewriteRule ^/def/fsdf/network(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/FSDF/master/rdf/network.ttl [R=303,L]
+        RewriteRule ^/def/fsdf/network(.*)$                             https://raw.githack.com/GeoscienceAustralia/FSDF/master/network.html$1 [R=303,L]
+
         # http://linked.data.gov.au/def/fsdf
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
