--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -110,6 +110,8 @@
         RewriteRule ^/def/dataciteroles(.*)$ "https://vocabs.gsq.digital/object?vocab_id=dataciteroles&uri=http://linked.data.gov.au/def/dataciteroles$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/dataciteroles(.*)$ "https://vocabs.gsq.digital/object?vocab_id=dataciteroles&uri=http://linked.data.gov.au/def/dataciteroles$1" [R=302,NE,L]
 
+	# /def/dataset-relationships -- see ontology file
+
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/depth-reference(.*)$ "https://vocabs.gsq.digital/object?vocab_id=depth-reference&uri=http://linked.data.gov.au/def/depth-reference$1&_mediatype=text/turtle" [R=302,L]
@@ -182,15 +184,29 @@
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/gsq-sample-facility(.*)$ "https://vocabs.gsq.digital/object?vocab_id=gsq-sample-facility&uri=http://linked.data.gov.au/def/gsq-sample-facility$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/gsq-sample-facility(.*)$ "https://vocabs.gsq.digital/object?vocab_id=gsq-sample-facility&uri=http://linked.data.gov.au/def/gsq-sample-facility$1" [R=302,NE,L]
+        RewriteRule ^/def/gsq-sample-facility(.*)$ "https://vocabs.gsq.digital/object?uri=http://linked.data.gov.au/def/gsq-sample-facility$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/gsq-sample-facility(.*)$ "https://vocabs.gsq.digital/object?uri=http://linked.data.gov.au/def/gsq-sample-facility$1" [R=302,NE,L]
 
-        # https://linked.data.gov.au/def/qg-file-type
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/nsw-quality-dimension(.*)$ "https://vocabs.gsq.digital/object?vocab_id=quality-dimension&uri=http://linked.data.gov.au/def/NSW-Data/quality-dimension$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/nsw-quality-dimension(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=quality-dimension&uri=http://linked.data.gov.au/def/NSW-Data/quality-dimension$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/nsw-quality-dimension(.*)$ "https://vocabs.gsq.digital/object?vocab_id=quality-dimension&uri=http://linked.data.gov.au/def/NSW-Data/quality-dimension$1" [R=302,NE,L]
+        RewriteRule ^/def/iso639-1(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/iso639-1$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/iso639-1(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/iso639-1$1" [R=302,NE,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/iso-19157-data-quality-dimension(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/iso-19157-data-quality-dimension$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/iso-19157-data-quality-dimension(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/iso-19157-data-quality-dimension$1" [R=302,NE,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/iso-iec-25012-data-quality-dimension(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/iso-iec-25012-data-quality-dimension$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/iso-iec-25012-data-quality-dimension(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/iso-iec-25012-data-quality-dimension$1" [R=302,NE,L]        
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/nsw-quality-dimension(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/nsw-quality-dimension$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/nsw-quality-dimension(.*).ttl$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/nsw-quality-dimension$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/nsw-quality-dimension(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/nsw-quality-dimension$1" [R=302,NE,L]
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -200,23 +216,22 @@
         # https://linked.data.gov.au/def/qg-agent
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/qg-agent(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-agent&uri=http://linked.data.gov.au/def/qg-agent$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/qg-agent(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-agent&uri=http://linked.data.gov.au/def/qg-agent$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/qg-agent(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-agent&uri=http://linked.data.gov.au/def/qg-agent$1" [R=302,NE,L]
+        RewriteRule ^/def/qg-agent(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-agent&uri=https://linked.data.gov.au/def/qg-agent$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-agent(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-agent&uri=https://linked.data.gov.au/def/qg-agent$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-agent(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-agent&uri=https://linked.data.gov.au/def/qg-agent$1" [R=302,NE,L]
 
-        # https://linked.data.gov.au/def/qg-file-type
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/qg-file-types(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/qg-file-types(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/qg-file-types(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-file-type&uri=http://linked.data.gov.au/def/qg-file-type$1" [R=302,NE,L]
+        RewriteRule ^/def/qg-file-types(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qg-file-types$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-file-types(.*).ttl$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qg-file-types$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-file-types(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qg-file-types$1" [R=302,NE,L]
 
         # https://linked.data.gov.au/def/qg-security-classifications
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/qg-security-classifications(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-security-classifications&uri=http://linked.data.gov.au/def/qg-security-classifications$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/qg-security-classifications(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-security-classifications&uri=http://linked.data.gov.au/def/qg-security-classifications$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/qg-security-classifications(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-security-classifications&uri=http://linked.data.gov.au/def/qg-security-classifications$1" [R=302,NE,L]
+        RewriteRule ^/def/qg-security-classifications(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-security-classifications&uri=https://linked.data.gov.au/def/qg-security-classifications$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-security-classifications(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qg-security-classifications&uri=https://linked.data.gov.au/def/qg-security-classifications$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qg-security-classifications(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qg-security-classifications&uri=https://linked.data.gov.au/def/qg-security-classifications$1" [R=302,NE,L]
 
         # https://linked.data.gov.au/def/qg-sites
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
@@ -228,9 +243,9 @@
         # https://linked.data.gov.au/def/qld-data-licenses
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/qld-data-licenses(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qld-data-licenses&uri=http://linked.data.gov.au/def/qld-data-licenses$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/qld-data-licenses(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qld-data-licenses&uri=http://linked.data.gov.au/def/qld-data-licenses$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/qld-data-licenses(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qld-data-licenses&uri=http://linked.data.gov.au/def/qld-data-licenses$1" [R=302,NE,L]
+        RewriteRule ^/def/qld-data-licenses(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qld-data-licenses&uri=https://linked.data.gov.au/def/qld-data-licenses$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qld-data-licenses(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=qld-data-licenses&uri=https://linked.data.gov.au/def/qld-data-licenses$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qld-data-licenses(.*)$ "https://vocabs.gsq.digital/object?vocab_id=qld-data-licenses&uri=https://linked.data.gov.au/def/qld-data-licenses$1" [R=302,NE,L]
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -299,6 +314,16 @@
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/qesd-qkd(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qesd-qkd$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qesd-qkd(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qesd-qkd$1" [R=302,NE,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/qesd-uom(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qesd-uom$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qesd-uom(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qesd-uom$1" [R=302,NE,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/report-detail-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=report-detail-type&uri=http://linked.data.gov.au/def/report-detail-type$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/report-detail-type(.*)$ "https://vocabs.gsq.digital/object?vocab_id=report-detail-type&uri=http://linked.data.gov.au/def/report-detail-type$1" [R=302,NE,L]
 
@@ -315,9 +340,9 @@
         # https://linked.data.gov.au/def/resource-type
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/resource-types(.*)$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/resource-types(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/resource-types(.*)$ "https://vocabs.gsq.digital/object?vocab_id=resource-type&uri=http://linked.data.gov.au/def/resource-type$1" [R=302,NE,L]
+        RewriteRule ^/def/resource-types(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/resource-types$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/resource-types(.*).ttl$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/resource-types$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/resource-types(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/resource-types$1" [R=302,NE,L]
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
