reinstate catalogue's /org/ list PID

--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -27,6 +27,7 @@
 
 	ProxyPreserveHost On
 
+	RewriteRule /org/(.*)		https://catalogue.linked.data.gov.au/org/$1 [L,R=302]
 	# ProxyPass	/org/connegp                            http://203.101.224.217/connegp.html
 	# ProxyPass	/def/					http://203.101.224.217/defs.php
 	# ProxyPass	/dataset/				http://203.101.224.217/datasets.php
