--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -134,9 +134,9 @@
         # https://linked.data.gov.au/def/dataset-relationships
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/dataset-relationships(.*)$ "https://vocabs.gsq.digital/object?vocab_id=dataset-relationships&uri=http://linked.data.gov.au/def/dataset-relationships$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/dataset-relationships(.*).ttl$ "https://vocabs.gsq.digital/object?vocab_id=dataset-relationships&uri=http://linked.data.gov.au/def/dataset-relationships$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/dataset-relationships(.*)$ "https://vocabs.gsq.digital/object?vocab_id=dataset-relationships&uri=http://linked.data.gov.au/def/dataset-relationships$1" [R=302,NE,L]
+        RewriteRule ^/def/dataset-relationships(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/dataset-relationships$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/dataset-relationships(.*).ttl$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/dataset-relationships$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/dataset-relationships(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/dataset-relationships$1" [R=302,NE,L]
 
         # http://linked.data.gov.au/def/dataset
         # all requests for RDF (turtle) just go to the whole borehole.ttl doc
@@ -156,11 +156,23 @@
 
 
         # http://linked.data.gov.au/def/fsdf
-#        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-#        RewriteCond %{HTTP:Accept} text/turtle [NC]
-#        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.ttl? [R=302,L]
-#        RewriteRule ^/def/fsdf(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.ttl [R=302,L]
-#        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.html$1 [R=302,L]
+	# Data Profile
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP_ACCEPT} text/turtle [NC]
+        RewriteRule /def/fsdf/dp$            https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/profiles/profile.ttl [R=302,L]
+        RewriteRule /def/fsdf/dp.ttl$        https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/profiles/profile.ttl [R=302,L]
+        RewriteRule /def/fsdf/dp$            https://raw.githack.com/surroundaustralia/fsdf-kg/master/docs/profile.html [R=302,L]
+
+        RewriteRule /def/fsdf/dp/feature-validator	https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/profiles/feature-validator.ttl [R=302,L]
+        RewriteRule /def/fsdf/dp/multi-validator	https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/profiles/multi-validator.ttl [R=302,L]
+	RewriteRule /def/fsdf/dp/repo			https://github.com/surroundaustralia/fsdf-kg [R=302,L]
+
+	# Ontology
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/ontologies/fsdf.ttl [R=302,L]
+        RewriteRule ^/def/fsdf(.*).ttl$                         https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/ontologies/fsdf.ttl [R=302,L]
+        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/surroundaustralia/fsdf-kg/master/docs/ont.html$1 [R=302,L]
 
         # GA's VocPub Profile
         RewriteRule /def/ga-vocpub/invalid.1.ttl	        https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/examples/invalid.1.ttl [R=302,L]
@@ -337,7 +349,7 @@
 	RewriteRule ^/def/loci-dp/guidance$			https://github.com/surroundaustralia/loci-data-profile/blob/master/README.md [R=302,L]
 	RewriteRule ^/def/loci-dp/validator/(.*)$		https://raw.githack.com/surroundaustralia/loci-data-profile/master/validators/$1.ttl [R=302,L]
 	RewriteRule ^/def/loci-dp/example/(.*)$                 https://raw.githack.com/surroundaustralia/loci-data-profile/master/examples/$1.ttl [R=302,L]
-
+	RewriteRule ^/def/loci-dp/repo				https://github.com/surroundaustralia/loci-data-profile [R=302,L]
 
         # http://linked.data.gov.au/def/loci
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
