--- a/conf/linked.data.gov.au-datasets.conf
+++ b/conf/linked.data.gov.au-datasets.conf
@@ -213,30 +213,30 @@
         # Turtle
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
-        RewriteRule ^\/dataset\/ausplots\/(.+).ttl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*).ttl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
         # RDF/XML
         RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
         RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
-        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml [R=302,L]
-        RewriteRule ^\/dataset\/ausplots\/(.+).rdf$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*).rdf$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml [R=302,L]
         # N-Triples
         RewriteCond %{QUERY_STRING} ^_format=application/n-triples$ [OR]
         RewriteCond %{HTTP:Accept} application/n-triples [NC]
-        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples [R=302,L]
-        RewriteRule ^\/dataset\/ausplots\/(.+).nt$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*).nt$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples [R=302,L]
         # JSON-LD
         RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
         RewriteCond %{HTTP:Accept} application/ld\+json [NC]
-        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json [R=302,L]
-        RewriteRule ^\/dataset\/ausplots\/(.+).jsonld$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*).jsonld$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json [R=302,L]
         # Notation3
         RewriteCond %{QUERY_STRING} ^_format=text/n3$ [OR]
         RewriteCond %{HTTP:Accept} text/n3 [NC]
-        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3 [R=302,L]
-        RewriteRule ^\/dataset\/ausplots\/(.+).n3$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3 [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3 [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*).n3$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3 [R=302,L]
         # .owl file extension
-        RewriteRule ^\/dataset\/ausplots\/(.+).owl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
+        RewriteRule ^\/dataset\/ausplots(.*).owl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
         # HTML
         RewriteRule ^/dataset/ausplots(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
 
@@ -245,30 +245,30 @@
         # Turtle
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
-        RewriteRule ^\/dataset\/corveg\/(.+).ttl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
+        RewriteRule ^\/dataset\/corveg(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
+        RewriteRule ^\/dataset\/corveg(.*).ttl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
         # RDF/XML
         RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
         RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
-        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml [R=302,L]
-        RewriteRule ^\/dataset\/corveg\/(.+).rdf$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml [R=302,L]
+        RewriteRule ^\/dataset\/corveg(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml [R=302,L]
+        RewriteRule ^\/dataset\/corveg(.*).rdf$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml [R=302,L]
         # N-Triples
         RewriteCond %{QUERY_STRING} ^_format=application/n-triples$ [OR]
         RewriteCond %{HTTP:Accept} application/n-triples [NC]
-        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples [R=302,L]
-        RewriteRule ^\/dataset\/corveg\/(.+).nt$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples
+        RewriteRule ^\/dataset\/corveg\/(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples [R=302,L]
+        RewriteRule ^\/dataset\/corveg\/(.*).nt$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples
         # JSON-LD
         RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
         RewriteCond %{HTTP:Accept} application/ld\+json [NC]
-        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json [R=302,L]
-        RewriteRule ^\/dataset\/corveg\/(.+).jsonld$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json [R=302,L]
+        RewriteRule ^\/dataset\/corveg(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json [R=302,L]
+        RewriteRule ^\/dataset\/corveg(.*).jsonld$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json [R=302,L]
         # Notation3
         RewriteCond %{QUERY_STRING} ^_format=text/n3$ [OR]
         RewriteCond %{HTTP:Accept} text/n3 [NC]
-        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3 [R=302,L]
-        RewriteRule ^\/dataset\/corveg\/(.+).n3$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3 [R=302,L]
+        RewriteRule ^\/dataset\/corveg(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3 [R=302,L]
+        RewriteRule ^\/dataset\/corveg(.*).n3$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3 [R=302,L]
         # .owl file extension
-        RewriteRule ^\/dataset\/corveg\/(.+).owl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
+        RewriteRule ^\/dataset\/corveg(.*).owl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
         # HTML
         RewriteRule ^\/dataset\/corveg(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
 
