--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -172,7 +172,7 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/ontologies/fsdf.ttl [R=302,L]
         RewriteRule ^/def/fsdf(.*).ttl$                         https://raw.githack.com/surroundaustralia/fsdf-kg/master/edg/ontologies/fsdf.ttl [R=302,L]
-        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/surroundaustralia/fsdf-kg/master/docs/ont.html$1 [R=302,L]
+        RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/surroundaustralia/fsdf-kg/master/docs/fsdf.html$1 [R=302,L]
 
         # GA's VocPub Profile
         RewriteRule /def/ga-vocpub/invalid.1.ttl	        https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/examples/invalid.1.ttl [R=302,L]
@@ -324,6 +324,13 @@
         RewriteRule ^/def/gnaf(.*).ttl$                         http://gnafld.net/def/gnaf$1.ttl [R=302,L]
         RewriteRule ^/def/gnaf(.*)$                             http://gnafld.net/def/gnaf$1 [R=302,L]
 
+        # http://linked.data.gov.au/def/irg
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/irg(.*)$                             https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.ttl? [R=302,L]
+        RewriteRule ^/def/irg(.*).ttl$                         https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.ttl$1 [R=302,L]
+        RewriteRule ^/def/irg(.*)$                             https://raw.githack.com/AGLDWG/iri-registry-ont/master/irg.html$1 [R=302,L]
+
         # http://linked.data.gov.au/def/iso19160-1-address-nz-profile
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -384,7 +391,13 @@
         # http://linked.data.gov.au/def/phs
 	RewriteRule ^/def/phs/voc(.*)$				http://dawe.surroundaustralia.com/object?uri=https://linked.data.gov.au/def/phs/voc$1 [QSA,L,R=302]
 	
-        RewriteRule ^/def/phs/0.2.1$				https://raw.githack.com/AGLDWG/phs-ont/0.2.1/phs.html [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/phs/profile                           https://raw.githack.com/AGLDWG/phs-ont/master/profile.ttl [R=302,L]
+        RewriteRule ^/def/phs/profile.ttl$                      https://raw.githack.com/AGLDWG/phs-ont/master/profile.ttl [R=302,L]
+	RewriteRule ^/def/phs/profile				https://raw.githack.com/AGLDWG/phs-ont/master/profile.html [R=302,L]
+
+        RewriteRule ^/def/phs/([0-9\.]+)$			https://raw.githack.com/AGLDWG/phs-ont/$1/phs.html [R=302,L]
 	RewriteCond %{QUERY_STRING} _profile=prof [OR]
         RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/dx-prof/ [OR]
         RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/dx-prof/\>
