--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -179,8 +179,8 @@
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/gsq-roles(.*)$ "https://vocabs.gsq.digital/object?vocab_id=gsq-roles&uri=http://linked.data.gov.au/def/gsq-roles$1&_mediatype=text/turtle" [R=302,L]
-        RewriteRule ^/def/gsq-roles(.*)$ "https://vocabs.gsq.digital/object?vocab_id=gsq-roles&uri=http://linked.data.gov.au/def/gsq-roles$1" [R=302,NE,L]
+        RewriteRule ^/def/gsq-roles(.*)$ "https://vocabs.gsq.digital/object?uri=http://linked.data.gov.au/def/gsq-roles$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/gsq-roles(.*)$ "https://vocabs.gsq.digital/object?uri=http://linked.data.gov.au/def/gsq-roles$1" [R=302,NE,L]
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -321,6 +321,11 @@
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/qesd-uom(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qesd-uom$1&_mediatype=text/turtle" [R=302,L]
         RewriteRule ^/def/qesd-uom(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qesd-uom$1" [R=302,NE,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/qld-obsprop(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qld-obsprop$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/qld-obsprop(.*)$ "https://vocabs.gsq.digital/object?uri=https://linked.data.gov.au/def/qld-obsprop$1" [R=302,NE,L]
 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
