add reg-roles, reg-statuses

--- a/conf/linked.data.gov.au-vocabularies.conf
+++ b/conf/linked.data.gov.au-vocabularies.conf
@@ -72,17 +72,29 @@
         RewriteRule ^/def/gba(.*).rdf$                          http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]
         RewriteRule ^/def/gba(.*)$                              http://registry.it.csiro.au/def/gba$1 [R=302,L]
 
-        # http://linked.data.gov.au/def/reg-status
+        # http://linked.data.gov.au/def/reg-roles
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC] 
-        RewriteRule ^/def/reg-status$                           https://raw.githack.com/AGLDWG/reg-status/master/index.ttl [R=302,L] 
-        RewriteRule ^/def/reg-status.ttl$                       https://raw.githack.com/AGLDWG/reg-status/master/index.ttl [R=302,L]
-        RewriteRule ^/def/reg-status$                           https://raw.githack.com/AGLDWG/reg-status/master/index.html [R=302,L] 
+        RewriteRule ^/def/reg-roles$                         https://agldwg.github.io/reg-roles/.ttl [R=302,L] 
+        RewriteRule ^/def/reg-roles.ttl$                     https://agldwg.github.io/reg-roles/.ttl [R=302,L]
+        RewriteRule ^/def/reg-roles$                         https://agldwg.github.io/reg-roles/ [R=302,L] 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/reg-status/(.+)$                      https://raw.githack.com/AGLDWG/reg-status/master/$1.ttl [R=302,L]
-        RewriteRule ^/def/reg-status/(.+).ttl$                  https://raw.githack.com/AGLDWG/reg-status/master/$1.ttl [R=302,L]
-        RewriteRule ^/def/reg-status/(.+)$                      https://raw.githack.com/AGLDWG/reg-status/master/$1.html [R=302,L]
+        RewriteRule ^/def/reg-roles/(.+)$                    https://agldwg.github.io/reg-roles/$1.ttl [R=302,L]
+        RewriteRule ^/def/reg-roles/(.+).ttl$                https://agldwg.github.io/reg-roles/$1.ttl [R=302,L]
+        RewriteRule ^/def/reg-roles/(.+)$                    https://agldwg.github.io/reg-roles/$1 [R=302,L]
+
+        # http://linked.data.gov.au/def/reg-statuses
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/reg-statuses$                         https://agldwg.github.io/reg-statuses/.ttl [R=302,L]
+        RewriteRule ^/def/reg-statuses.ttl$                     https://agldwg.github.io/reg-statuses/.ttl [R=302,L]
+        RewriteRule ^/def/reg-statuses$                         https://agldwg.github.io/reg-statuses/ [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/reg-statuses/(.+)$                    https://agldwg.github.io/reg-statuses/$1.ttl [R=302,L]
+        RewriteRule ^/def/reg-statuses/(.+).ttl$                https://agldwg.github.io/reg-statuses/$1.ttl [R=302,L]
+        RewriteRule ^/def/reg-statuses/(.+)$                    https://agldwg.github.io/reg-statuses/$1 [R=302,L]
 
         # GSQ Vocabs
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
