add other domain redirects to git

--- a/conf/catalogue.linked.data.gov.au.conf
+++ b/conf/catalogue.linked.data.gov.au.conf
@@ -11,4 +11,6 @@
 	ProxyPreserveHost On
         ProxyPass "/"  "http://203.101.224.217/"
         ProxyPassReverse "/"  "http://203.101.224.217/"
+RewriteCond %{SERVER_NAME} =catalogue.linked.data.gov.au
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
