--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -1,5 +1,12 @@
-# Non-persistent domain - see HTTPS version
-<VirtualHost *:80>
+# Persistent domain
+#
+# All previous patterns for this domain were removed in handover from Guidelines v0.3 to v2.0 (see https://github.com/AGLDWG/guidelines)
+# in August, 2018.
+#
+# All patterns here will be built up from approved entries in the AGLDWG PID Allocations Catalogue (http://catalogue.linked.data.gov.au/)
+# Nick Car, 13/08/2018
+#
+<VirtualHost *>
         ServerName linked.data.gov.au
 
         RewriteEngine  on
