updated confs, new server

--- a/conf/www.linked.data.gov.au.conf
+++ b/conf/www.linked.data.gov.au.conf
@@ -6,6 +6,9 @@
 #
 <VirtualHost *>
         ServerName www.linked.data.gov.au
+        LogLevel warn rewrite:trace3
+        ErrorLog ${APACHE_LOG_DIR}/linked.data.gov.au/error.log
+        CustomLog ${APACHE_LOG_DIR}/linked.data.gov.au/access.log combined
 
         RewriteEngine  on
 
