--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -25,26 +25,16 @@
         Include /etc/apache2/sites-available/linked.data.gov.au-vocabularies.conf        
         
 
+	#
+	#	Proxy
+	#
 	ProxyPreserveHost On
 
 	RewriteRule /org/(.*)		https://catalogue.linked.data.gov.au/org/$1 [L,R=302]
-	# ProxyPass	/org/connegp                            http://203.101.224.217/connegp.html
-	# ProxyPass	/def/					http://203.101.224.217/defs.php
-	# ProxyPass	/dataset/				http://203.101.224.217/datasets.php
-	# ProxyPass	/org/					http://203.101.224.217/orgs.php
-        # 
-        # # dataset/ Register
-	# RewriteRule ^/dataset/(.+)$                             http://catalogue.linked.data.gov.au/dataset/$1 [L,R=302]
-        #
-        # # def/ Register
-        # RewriteRule ^/def/(.+)$                                 http://catalogue.linked.data.gov.au/def/$1 [L,R=302]
-        #
-        # # def/ Register
-        # RewriteRule ^/org/(.+)$                                 http://catalogue.linked.data.gov.au/org/$1 [L,R=302]
 
 	# AGLDWG website
-	RewriteRule ^/?$					https://www.linked.data.gov.au [L,R=302]
-	RewriteRule ^/(governance|assistance|showcase|events|groups|howto|contact|join)$                                        http://www.linked.data.gov.au/$1 [L,R=302]
+	RewriteRule ^/?$									https://www.linked.data.gov.au [L,R=302]
+	RewriteRule ^/(governance|assistance|showcase|events|groups|howto|contact|join)$	http://www.linked.data.gov.au/$1 [L,R=302]
 
 	# final 404 rule for non-existent PID
 	ErrorDocument 404 http://203.100.30.55/404.html
@@ -52,8 +42,8 @@
 	RewriteRule (.*) - [R=404]  # L included by default for 300 < R > 399
 
         # Let's Encrypt Certificate details
+        Include /etc/letsencrypt/options-ssl-apache.conf
         SSLCertificateFile /etc/letsencrypt/live/linked.data.gov.au/fullchain.pem
         SSLCertificateKeyFile /etc/letsencrypt/live/linked.data.gov.au/privkey.pem
-        Include /etc/letsencrypt/options-ssl-apache.conf
 </VirtualHost>
 </IfModule>
